--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -270,6 +270,9 @@ zkTimeout=10000
 # The interval is specified in seconds.
 #auditorPeriodicBookieCheckInterval=86400
 
+# How long to wait, in seconds, before starting auto recovery of a lost bookie
+#lostBookieRecoveryDelay=0
+
 # number of threads that should handle write requests. if zero, the writes would
 # be handled by netty threads directly.
 # numAddWorkerThreads=1
